src/components/home/home.css
h4 { 
    background: #222;
    padding: 10px 30px 10px 66px;
    color: whitesmoke;
    position: relative;
    margin: -1px 0;
}

.noCharacters {
    padding: 15px 66px;
    text-align: left;
}

.fa-users, .fa-cogs {
    position: absolute;
    color: white;
    font-size: 62px;
    left: -24px;
    top: -4px;
}

.homeShell {
    margin: 30px auto;
    max-width: 816px;
}

.homeShell .characterShell:first-child {
    margin-bottom: 15px;
}

.loginShell {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    padding-top: 30px;
}

.loginShell button {
    margin-top: 15px;
}

.characterShell {
    padding-bottom: 15px;
    background-color: white;
    -webkit-box-shadow: 5px 5px 15px 5px #000000;
    box-shadow: 5px 5px 15px 5px #000000;
    overflow: hidden;
}

.character {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}

.characterLink {
    display: flex;
    width: 100%;
    justify-content: space-around;
}


.characterLink:hover {
    background: purple;
    cursor: pointer;
    transition: .6s;
}
.characterLink:hover p, .characterLink:hover .fa-minus {
    color: white;
    transition: .6s;
}

.character p {
    min-width: 24%;
    text-align: center;
}

.character p:first-child {
    font-weight: 700;
    text-align: left;
    padding-left: 70px;
}
.character p:last-child {
    padding-right: 70px;
}

.fa-plus {
    margin: 15px 5px 15px 60px;
    padding: 5px;
    border-radius: 15px;
}

.fa-plus:hover {
    background: purple;
    color: whitesmoke;
    transition: .6s;
}

.fa-minus {
    padding: 5px;
    border-radius: 15px;
    margin-right: 70px;
}
.fa-minus:hover {
    color: purple !important;
    background: whitesmoke;
    transition: .6s;
}

.overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #00000075;
}

.displayNone {
    display: none;
}

.modelBody {
    width: 422px;
    padding: 0px 0px 30px;
    background: white;
    margin: 125px auto;
    -webkit-box-shadow: 5px 5px 15px 5px #000000;
    box-shadow: 5px 5px 15px 5px #000000;
}

.modelInnards {
    padding: 0 30px;
}

.modelBody p {
    margin: 0;
    text-align: left;
    text-indent: 23px;
}

.modelBody h5 {
    margin: 0;
    font-weight: 700;
    margin-bottom: 15px;
    text-align: center;
    background-color: #990000;
    color: whitesmoke;
    padding: 15px 20px;
}
.fa-exclamation-triangle {
    margin-right: 5px;
}

.modelButtons {
    width: 100%;
    display: flex;
    justify-content: space-between;
    margin-top: 25px;
}

button {
    border: none;
    background: lightgray;
    border-radius: 15px;
    padding: 5px 10px;
    cursor: pointer;
}

button:hover {
    background: purple;
    color: whitesmoke;
}

.modelButtons .no:hover {
    background: #990000;
    color: whitesmoke;
}

